Enable preview and set java version